# OpenDeskTools

./: .gitattributes  .gitignore  LICENSE  README.en.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/workflows/: ci.yml
scripts/: capture-window.ps1  check-node.mjs  check-source-safety.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: screenshot_probe.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: capture.rs  clipboard.rs  general.rs  hotkey.rs  mod.rs  overview.rs  qr.rs  quick_launch.rs  theme.rs
src-tauri/src/infrastructure/: application.rs  autostart.rs  clipboard.rs  clipboard_input.rs  clipboard_listener.rs  clipboard_settings.rs  clipboard_surface_controller.rs  clipboard_surface_foreground.rs  clipboard_surface_pointer.rs  clipboard_surface_window.rs  clipboard_writer.rs  data_directory.rs  debug_qa.rs  diagnostics.rs  disabled_hotkeys.rs  general_settings.rs  hotkey.rs  hotkey_capture.rs  image.rs  image_output.rs  keyboard_hook.rs  mod.rs  popup_geometry.rs  qr.rs  qr_toast_surface_window.rs  quick_launch.rs  source_icon.rs  storage.rs  surface.rs  surface_window_animation.rs  theme.rs  theme_asset.rs  tool_menu_surface_window.rs  tray.rs  usage_statistics.rs  windowing.rs
src-tauri/src/infrastructure/clipboard_surface_window/: geometry.rs  native_policy.rs
src-tauri/src/infrastructure/pin_image/: mod.rs  service.rs  window_runtime.rs
src-tauri/src/infrastructure/pin_image/window_runtime/: windows_impl.rs
src-tauri/src/infrastructure/screenshot/: annotation.rs  candidate.rs  crop.rs  mod.rs  model.rs  monitor.rs  overlay.rs  probe.rs  selection.rs  service.rs
src-tauri/src/infrastructure/screenshot/backend/: fake.rs  gdi.rs  mod.rs
src/app/: App.tsx  ClipboardPreviewSurfaceRoot.module.css  ClipboardPreviewSurfaceRoot.tsx  ClipboardSurfaceRoot.module.css  ClipboardSurfaceRoot.tsx  QrToastSurfaceRoot.tsx  ToolMenuSurfaceRoot.module.css  ToolMenuSurfaceRoot.tsx  captureToolsClient.ts  captureToolsModel.ts  clipboardClient.ts  clipboardController.ts  clipboardModel.ts  clipboardSurfaceUnderlay.ts  generalClient.ts  generalModel.ts  hotkeyCaptureClient.ts  hotkeyClient.ts  hotkeyController.ts  hotkeyKeyContract.ts  hotkeyModel.ts  overviewClient.ts  overviewModel.ts  previewData.ts  qrClient.ts  qrConversionModel.ts  quickLaunchClient.ts  quickLaunchModel.ts  themeClient.ts  themeController.ts  themeModel.ts  themeRuntime.ts  useClipboardController.ts  useDesktopWebViewGuards.ts  useGeneralSettings.ts  useHotkeyCaptureSession.ts  useHotkeyController.ts  useThemeController.ts  useWindowSurfaceRuntime.ts  windowSurfaceMetrics.ts
src/styles/: global.css  themes.css  tokens.css  windowSurfaces.module.css
tests/app/: appClipboardSurfaceNavigation.test.tsx  captureToolsClient.test.ts  clipboardClient.test.ts  clipboardController.test.ts  clipboardHistoryControls.test.tsx  clipboardImagePreview.test.tsx  clipboardModel.test.ts  clipboardPage.test.tsx  clipboardPreviewSurface.test.tsx  clipboardSurface.test.tsx  clipboardSurfaceUnderlay.test.tsx  dialogKeyboard.test.tsx  generalClient.test.ts  generalPage.test.tsx  hotkeyCaptureClient.test.ts  hotkeyCaptureSession.test.tsx  hotkeyClient.test.ts  hotkeyController.test.ts  hotkeyKeyContract.test.ts  hotkeysPageCapture.test.tsx  overviewModel.test.ts  productionBoundary.test.ts  qrClient.test.ts  quickLaunchClient.test.ts  quickLaunchModel.test.ts  rangeNumberField.test.tsx  settingsSourceBoundary.test.ts  sourceAppIcon.test.tsx  themeClient.test.ts  themeController.test.ts  themePage.test.tsx  themeRuntime.test.ts  windowSurfaceArchitecture.test.ts  windowSurfaceMetrics.test.tsx  (+1 more)
(+79 files in other folders)
