[package]
name = "open-desk-tools"
version = "0.1.0"
description = "OpenDeskTools"
authors = ["OpenDeskTools"]
edition = "2021"

[features]
default = []
console = []

[lib]
name = "open_desk_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
thiserror = "2"
png = "0.17"
regex = "1.11"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
tauri-plugin-single-instance = "2"
rfd = { version = "0.17.2", default-features = false, features = ["common-controls-v6"] }
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_System_DataExchange",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Ole",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Accessibility",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
